# QCD-evolution

./: .gitignore  CMakeLists.txt  LO-DGLAP.ipynb  Plotting.ipynb  PreproceeingPij.ipynb  README  Spin.ipynb
.ipynb_checkpoints/: LO-DGLAP-checkpoint.ipynb  Plotting-checkpoint.ipynb  PreproceeingPij-checkpoint.ipynb  Untitled-checkpoint.ipynb
TestMains/: bottom.cpp  charm.cpp  light.cpp  mdglap.cpp  test.cpp
src/: CMakeLists.txt  convolution.cpp  convolution.h  evolution.cpp  evolution.h  interp_nd.h  medium_correction.cpp  medium_correction.h  qcd_const.cpp  qcd_const.h  vac_splitting.cpp  vac_splitting.h
